--- a/thread/package.json
+++ b/thread/package.json
@@ -23,9 +23,11 @@
     "expo": "~52.0.43",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
+    "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "^17.0.6",
     "expo-router": "~4.0.20",
     "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -37,7 +39,9 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
